--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/material": "^11.2.8",
     "@angular/platform-browser": "~11.2.8",
     "@angular/platform-browser-dynamic": "~11.2.8",
+    "@angular/platform-server": "~11.2.8",
     "@angular/router": "~11.2.8",
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
     "bootstrap": "^4.6.0",
