--- a/angular.json
+++ b/angular.json
@@ -219,5 +219,8 @@
       }
     }
   },
-  "defaultProject": "ng-app"
+  "defaultProject": "ng-app",
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
+  }
 }
