--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "@angular/platform-server": "~11.2.8",
     "@angular/router": "~11.2.8",
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
+    "@ngrx/effects": "^12.5.0",
+    "@ngrx/entity": "^12.5.0",
+    "@ngrx/store": "^12.5.0",
+    "@ngrx/store-devtools": "^12.5.0",
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
@@ -37,6 +41,7 @@
     "@angular-devkit/build-angular": "~0.1102.7",
     "@angular/cli": "~11.2.7",
     "@angular/compiler-cli": "~11.2.8",
+    "@ngrx/schematics": "^12.5.0",
     "@types/jasmine": "~3.6.0",
     "@types/jquery": "^3.5.5",
     "@types/node": "^12.11.1",
