--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "ngrx-store-localstorage": "^12.0.1",
     "roboto-fontface": "^0.10.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
