--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.8",
+    "@angular/animations": "^11.2.14",
     "@angular/cdk": "^11.2.8",
     "@angular/common": "~11.2.8",
     "@angular/compiler": "~11.2.8",
@@ -33,6 +33,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "ngrx-store-localstorage": "^12.0.1",
+    "ngx-toastr": "^14.1.4",
     "roboto-fontface": "^0.10.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
